public enum EtatRobot { MARCHE,ARRET}
