public enum SensAxe { POSITIF, NEGATIF}

