@startuml

title __CAESAR's Class Diagram__\n

  namespace test {
    enum AxeRobot {
    }
  }
  

  namespace test {
    class test.CommunicationRobot {
    }
  }
  

  namespace test {
    enum EtatRobot {
    }
  }
  

  namespace test {
    class test.ObstaclePosition {
    }
  }
  

  namespace test {
    class test.RobotPosition {
    }
  }
  

  namespace test {
    enum SensAxe {
    }
  }
  

  namespace test {
    class test.TraitementDonnees {
    }
  }
  

  test.CommunicationRobot o-- test.ObstaclePosition : obstaclePosition
  test.ObstaclePosition o-- test.RobotPosition : robotPosition
  test.RobotPosition o-- test.AxeRobot : axeRobot
  test.RobotPosition o-- test.EtatRobot : etatRobot
  test.RobotPosition o-- test.SensAxe : sensAxe
  test.TraitementDonnees o-- test.CommunicationRobot : communicationRobot


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
